--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -322,6 +322,9 @@ ul.job_listings {
 	}
 }
 .job-manager, .job_listing, .job-types {
+	.job-type {
+		color: @part-time;
+	}
 	.full-time {
 		color: @full-time;
 	}
