--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -122,8 +122,9 @@
 		margin: 0 0 1em 0;
 		padding: 0 0 1em 0;
 		line-height: 2em;
+		border: 0;
 		border-bottom: 1px solid #eee;
-		overflow: hidden;
+		.clearfix;
 		label {
 			display: block;
 			margin: 0;
@@ -568,11 +569,9 @@ ul.job_listings {
 		background: #f9f9f9;
 		border-top: 1px solid #e5e5e5;
 
-		.reset, .rss_link {
+		a {
 			float: right;
-		}
-		.rss_link {
-			padding-right: 10px;
+			padding-left: 10px;
 		}
 	}
 }
@@ -598,12 +597,16 @@ ul.job_listings {
 }
 .job_listing_preview_title, .entry-content .job_listing_preview_title {
 	padding: .5em 1em;
-	margin-bottom: 0;
 	vertical-align: middle;
 	position: relative;
 	background: #eee;
+	h2 {
+		margin: 0;
+		clear: none;
+	}
 	.button {
 		float: right;
+		margin-left: .25em;
 	}
 }
 .job_summary_shortcode {
