--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -207,3 +207,60 @@
 	margin-left: -7px;
 	border-left-color: #464646;
 }
+
+/* Addons */
+.wp_job_manager_addons_wrap {
+	.items {
+		overflow: hidden;
+		li {
+			display: inline-block;
+			margin: 0 10px 10px 0 !important;
+			padding: 0;
+			vertical-align: top;
+			width: 250px;
+			border: 1px solid #ddd;
+			-webkit-box-shadow:
+				inset 0 1px 0 rgba(255,255,255,0.2),
+				inset 0 -1px 0 rgba(0,0,0,0.1);
+			box-shadow:
+				inset 0 1px 0 rgba(255,255,255,0.2),
+				inset 0 -1px 0 rgba(0,0,0,0.1);
+			overflow: hidden;
+			position: relative;
+			a {
+				color: inherit;
+				text-decoration: none;
+			}
+			img {
+				max-width: 100%;
+				height: auto;
+				display: block;
+				margin: 0;
+				background: #fff;
+			}
+			h2 {
+				margin: 0 !important;
+				padding: 10px 20px !important;
+				line-height: 1;
+				background: rgba(255,255,255,0.3);
+				position: absolute;
+				max-width: 280px;
+				top: 20px;
+				left: 0;
+				font-size: 18px;
+				text-shadow: none;
+			}
+			.third_party {
+				display: none;
+			}
+			p {
+				padding: 20px !important;
+				margin: 0 !important;
+				border-top: 1px solid #f1f1f1;
+			}
+			.cost {
+				display: none;
+			}
+		}
+	}
+}
