--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1,11 +1,11 @@
 @import "mixins";
 
 .widefat {
-	.column-filled {
+	.column-filled, .column-featured {
 		text-align: center;
 	}
 	.column-company {
-		width: 25%;
+		width: 20%;
 	}
 	td.column-company {
 		padding-left: 50px !important;
@@ -22,8 +22,7 @@
 			border: 1px solid #fff;
 		}
 		strong {
-			display: block;
-			margin-bottom: .2em;
+			padding-right: .5em;
 		}
 		.tagline {
 			display: block;
@@ -31,8 +30,7 @@
 			color: #bbbbbb;
 		}
 		a.company_twitter {
-			float: right;
-			margin-left: 1em;
+
 		}
 	}
 	.column-job_posted {
@@ -242,7 +240,8 @@
 				margin: 0 !important;
 				padding: 10px 20px !important;
 				line-height: 1;
-				background: rgba(255,255,255,0.3);
+				background: rgba(255,255,255,0.8);
+				color: #000;
 				position: absolute;
 				max-width: 280px;
 				top: 20px;
