--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -188,10 +188,13 @@
 }
 div.job_listings {
 	margin-bottom: 1em;
+	ul.job_listings {
+		margin: 0;
+	}
 }
 ul.job_listings {
 	padding: 0;
-	margin: 0 !important;
+	margin: 0;
 	border-top: 1px solid #eee;
 
 	&.loading {
@@ -403,6 +406,7 @@ ul.job_listings {
 		margin: 0 0 1.5em;
 		overflow: hidden;
 		zoom: 1;
+		clear: both;
 		li {
 			margin: 0 1em 0 0;
 			padding: .5em;
