--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -73,9 +73,11 @@
 	}
 	td.column-job_position {
 		width: 30%;
-		padding-right: 50px !important;
 		height: 34px;
-		position: relative;
+		.job_position {
+			position: relative;
+			padding-right: 50px !important;
+		}
 		a.job_title {
 			font-weight: bold;
 		}
