--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -222,7 +222,7 @@ ul.job_listings {
 			&:hover, &:focus {
 				background-color: #fcfcfc;
 			}
-			img {
+			img.company_logo {
 				width: 42px;
 				height: 42px;
 				position: absolute;
