--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -43,7 +43,7 @@
 	color: @secondarytext;
 	.text_shadow( 0, 1px, 0, lighten( @secondary, 4 ) );
 	list-style:none outside;
-	.clearfix();
+	.clearfix;
 	width: auto;
 	-webkit-box-shadow:
 		inset 0 -2px 6px rgba(0,0,0,0.05),
@@ -192,7 +192,9 @@ ul.job_listings {
 	border-top: 1px solid #eee;
 
 	&.loading {
-		background: url(../images/ajax-loader.gif) no-repeat center;
+		min-height: 96px;
+		border-bottom: 1px solid #eee;
+		background: url(../images/ajax-loader.gif) no-repeat center 32px;
 	}
 	li.job_listing, li.no_job_listings_found {
 		list-style: none outside;
