--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -170,6 +170,13 @@
 		width: auto;
 		margin: 4px 2px;
 	}
+	.description {
+		display: block;
+		color: #999;
+	}
+	.form-field-checkbox .description {
+		display: inline;
+	}
 }
 
 /* TipTip CSS - Version 1.2 */
