--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -211,6 +211,7 @@ div.job_listings {
 		margin: 0;
 	}
 }
+.rp4wp-related-job_listing > ul,
 ul.job_listings {
 	padding: 0;
 	margin: 0;
@@ -239,6 +240,7 @@ ul.job_listings {
 		a {
 			display: block;
 			padding: 1em 1em 1em 2em;
+			border: 0;
 			overflow: hidden;
 			zoom: 1;
 			position: relative;
@@ -383,7 +385,7 @@ ul.job_listings {
 		margin: 0 0 2em;
 		display: block;
 		clear: both;
-		min-height: 3em;
+		min-height: 5em;
 		box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
 		img {
@@ -615,6 +617,7 @@ ul.job_listings {
 		a {
 			float: right;
 			padding-left: 10px;
+			border: 0;
 		}
 	}
 }
@@ -640,6 +643,7 @@ div.job_listings {
 		}
 		&:hover, &:focus {
 			background-color: #fcfcfc;
+			border-bottom: 1px solid #eee;
 		}
 	}
 }
@@ -758,6 +762,15 @@ div.job_listings {
 }
 
 #job-manager-job-dashboard {
+	.account-sign-in {
+		.button {
+			margin-right: .5em;
+			&:before {
+				.display-icon;
+				content: '\e808';
+			}
+		}
+	}
 	table {
 		ul.job-dashboard-actions {
 			margin: 0;
@@ -829,6 +842,7 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 				padding: .5em;
 				min-width: 1em;
 				display: block;
+				border: 0;
 			}
 			span.current, a:hover, a:focus {
 				background: #eee;
