--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -929,3 +929,27 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 		margin: 0 !important;
 	}
 }
+
+.rtl {
+	.job-manager-form {
+		label {
+			float: right;
+		}
+		div.field {
+			float: left;
+		}
+	}
+	.job_listing_preview_title, .entry-content .job_listing_preview_title {
+		.button {
+			float: left;
+		}
+	}
+	.single_job_listing {
+		.meta {
+			li {
+				float: right;
+				margin: 0 0 0 1em;
+			}
+		}
+	}
+}
