--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -195,8 +195,16 @@
 	}
 }
 .wp_job_manager_meta_data {
-	overflow: hidden;
 	padding: 12px;
+	zoom: 1;
+	&:before,
+	&:after {
+	  content: "";
+	  display: table;
+	}
+	&:after {
+	  clear: both;
+	}
 	.form-field {
 		width: 50%;
 		line-height: 2em;
@@ -235,7 +243,7 @@
 			box-sizing: border-box;         /* Opera/IE 8+ */
 			vertical-align: middle;
 		}
-		input.checkbox {
+		input.checkbox, input.radio {
 			width: auto;
 			margin: 4px 2px;
 			display: inline-block;
